fixed media query so it formats correctly on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1091,4 +1091,10 @@ body.light .footer-email {
     width: 100px;
     height: 125px;
   }
+  h1 {
+    font-size: clamp(3rem, 12vw, 5rem);
+  }
+  .hero-buttons {
+    flex-wrap: wrap;
+  }
 }
